fix: The responsive behaviour of the `MainTable` wrapped inside a `ScrollableTable` is not equivalent to the default case (#1247)

--- a/src/components/ScrollableTable/ScrollableTable.scss
+++ b/src/components/ScrollableTable/ScrollableTable.scss
@@ -45,12 +45,12 @@
         display: block;
       }
 
-      tbody tr {
-        display: block;
+      tbody {
+        display: grid;
       }
 
-      tbody tr:first-child {
-        margin-top: $spv--x-large;
+      tbody tr {
+        display: block;
       }
     }
   }
